--- a/static/index.css
+++ b/static/index.css
@@ -13,19 +13,22 @@ html, body{
 body {
     background-color: #0B0B3B !important;
     font-family:'NeoDunggeunmo';
-    /* font-family: 'Noto Sans KR', sans-serif !important; */
     color: #ffffff  !important;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
+/* header CSS */
 header {
+    text-align: center;
     color:#FA58D0;
     font-size: 3em;
     padding-top: 3em;
 }
 
+
+/* main 속성 CSS */
 .items {
     display: flex;
     align-items: center;
@@ -37,40 +40,21 @@ header {
     padding: 20px;
 }
 
-main {
-  flex: 1;
+a {
+    all: unset;
+    cursor: pointer;
 }
+
+/* footer CSS */
 
 footer{
     margin-top: auto;
 }
 
 footer > p {
+    font-family: 'Noto Sans KR', sans-serif;
     color: #7a7d84;
     font-weight: 100;
     font-size: 0.7rem;
     margin: 0;
 }
-
-a{
-    all: unset;
-    cursor: pointer;
-}
-
-
-/* 
-
-@media screen and (max-width: 600px) {
-    .row {
-        padding: 0 10vw 0 10vw;
-    }
-
-    .name {
-        font-size: 6vw;
-        font-weight: 700;
-    }
-
-    .description {
-        font-size: 3vw;
-    }
-  }  */
