--- a/static/index.css
+++ b/static/index.css
@@ -43,6 +43,11 @@ header {
 a {
     all: unset;
     cursor: pointer;
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
 }
 
 /* footer CSS */
