--- a/static/index.css
+++ b/static/index.css
@@ -24,7 +24,7 @@ header {
     text-align: center;
     color:#FA58D0;
     font-size: 3em;
-    padding-top: 3em;
+    padding: 3em 0 1em 0;
 }
 
 
@@ -38,15 +38,24 @@ header {
 
 .item {
     padding: 20px;
+    text-align: center;
+    font-size: 2em;
 }
 
-a {
+.item h3 {
+    padding-bottom: 10px;
+}
+.item img {
+    width: 70%;
+}
+
+main a {
     all: unset;
     cursor: pointer;
     text-decoration: none;
 }
 
-a:visited{
+main a:visited{
     color: white;
 }
 
@@ -62,4 +71,8 @@ footer > p {
     font-weight: 100;
     font-size: 0.7rem;
     margin: 0;
+}
+
+footer a:visited{
+    color: #7a7d84;
 }
